Don't re-enable the toolbar once package downloading is finished.

BUG: 274592